Revise Burp Suite installation instructions for Linux
Updated installation steps for Burp Suite Professional on Linux, added keygenerator and execution commands.